# google-transport-rs-gtk

./: Cargo.toml  README.md
resources/: resources.gresource.xml
src/: .translate.rs.swp  main.rs  translate.rs
