[package]
name = "raindropcat"
version = "0.1.3"
edition = "2018"
license = " GPL-3.0-or-later"
description = "A translate tool"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.14.0"
glib = "0.14.2"
gio = "0.14.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
seahorse = "1.0.0"
serde_json = "1.0"

# build.rs need it
[build-dependencies]
gio = "0.14.0"
